--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,6 +7,11 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+    <h1>About me</h1>
+    <p>Hello world</p>
 	</body>
 </html>
+
+
+
+
