--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,13 +1,10 @@
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/png" href="/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-    <h1>contact me</h1>
-	</body>
-</html>
-
+--- 
+import { ContactForm } from '@/components/ContactForm'
+import BaseLayout from '@/layouts/BaseLayout.astro'
+const pageTitle = 'Contact'
+const heroTitle = "Let's talk"
+const heroDescription ='We can discuss about that amazing project in mind or simply say hi'
+--- 
+<BaseLayout pageTitle={pageTitle} title={heroTitle} description={heroDescription}>
+  <ContactForm />
+</BaseLayout>
