--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,117 @@
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/png" href="/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+--- 
+import BaseLayout from '@/layouts/BaseLayout.astro'
+
+import { Button } from "@/components/ui/button"
+
+import { ChevronRight, Download, Github, Linkedin, Mail } from 'lucide-react'
+const pageTitle = 'Home'
+const heroTitle='< Hello world />'
+const heroDescription=" I'm a web developer based in colombia"
+--- 
+<BaseLayout pageTitle={pageTitle} title={heroTitle} description={heroDescription}>
+  <div class="container md:flex mx-auto max-w-xl px-4 py-2 mb-4 items-center justify-between">
+    <section class="mr-2 pr-6">
+      <h2 class="text-3xl font-bold"> Daniel Santiago MJ</h2>
+      <p class="text-justify">
+        Passionate digital craftsman always learning something new.
+      </p>
+    </section>
+    <section class="flex justify-center ml-2 mx-auto" >
+      <img src="/profile.png" alt="profile picture" class="max-w-24 rounded-full border-2 dark:border-slate-900 border-slate-200 "/>
+    </section>
+  </div>
+  <div class="container mx-auto max-w-xl text-center">
+      <h2 class="text-2xl text-start font-bold mb-2"> Intro</h2>
+      <p class="pl-2 text-justify"> 
+          I&apos;m a software developer based in Barranquilla, Colombia with a passion for
+          building digital services/stuff. A fan of learning and
+          interacting with new technologies. when i&apos;m not online, i love to
+          play videogames, play football and expend time with my dogs and cat.
+    </p>
+    <h3 class="text-lg font-bold mt-3 mb-2">
+      Learn more about me
+    </h3>
+    <section class="flex justify-evenly mx-auto items-center flex-col md:flex-row">
+     <a class="flex items-center" href="https://docs.google.com/document/d/1gNzzFDvFDE_7reufsQt8Oqi4ozO_--AHzdryvmtXcXA/export?format=pdf">
+        <Button variant="outline">
+          Download cv <Download size={16} />
+        </Button>
+      </a>
+      <span>or</span>
+      <a class="flex items-center" href="/about">
+        <Button variant="outline">
+          Check profile <ChevronRight size={16} />  
+        </Button>
+      </a> 
+    </section>
+  </div>
+  <div class="container text-center mx-auto max-w-xl py-2 mt-8">
+    <h2 class="text-2xl text-start font-bold mb-2">
+      Work
+    </h2>
+    <p class="text-justify pl-2 mb-8">
+      Companies i've worked with and projects i've been involved with as dev and teacher.
+      Contact me to learn more about those projects.
+    </p>
+    <div class="grid md:grid-cols-3 gap-4 grid-cols-2 mb-2 px-2 items-center">
+      <img src="/companies/zemoga-logo-white.png" alt="zemoga logo dark mode" class="rounded-lg hidden dark:block mb-4"/>
+      <img src="/companies/zemoga-logo-grey.png" alt="zemoga logo light mode" class="rounded-lg block dark:hidden mb-4"/>
+
+      <img src="/companies/globant-logo-light.png" alt="globant logo dark mode" class="rounded-lg hidden dark:block mb-4"/>
+      <img src="/companies/globant-logo-dark.svg" alt="globant logo light mode" class="rounded-lg block dark:hidden mb-4 "/>
+
+      <img src="/companies/koombea-white.svg" alt="koombea logo dark mode" class="rounded-lg hidden dark:block mb-4 "/>
+      <img src="/companies/koombea.svg" alt="koombea logo light mode" class="rounded-lg block dark:hidden mb-4 "/>
+
+      <img src="/companies/makeitreal-white.png" alt="Make it real  logo dark mode" class="rounded-lg hidden dark:block mb-2"/>
+      <img src="/companies/makeitreal.png" alt="Make it real  logo light mode" class="rounded-lg block dark:hidden mb-2"/>
+
+      <img src="/companies/colorbeats-white.png" alt="Colorbeats  logo dark mode" class="rounded-lg hidden dark:block mb-2"/>
+      <img src="/companies/colorbeats.png" alt="Colorbeats logo light mode" class="rounded-lg block dark:hidden mb-2"/> 
+      
+      <img src="/companies/horus-sc-white.svg" alt="Horus Smart Control  logo dark mode" class="rounded-lg hidden dark:block mb-2 "/>
+      <img src="/companies/horus-sc.svg" alt="Horus Smart Control  logo light mode" class="rounded-lg block dark:hidden mb-2"/>   
+    </div>
+  </div>
+  <div class="container text-center mx-auto max-w-xl py-2 mt-4">
+    <h2 class="text-2xl text-start font-bold mb-2">
+      Say hi
+    </h2>
+    <p class="text-justify pl-2">
+      You have a project in mind or just want to say hi? Feel free to drop me a message.
+    </p>
+    <a href="/contact">
+      <Button variant="outline">
+        Get in touch <ChevronRight size={16} />
+      </Button>
+    </a>
+  </div>
+  <div class="containter mx-auto max-w-xl py-2 my-4">
+    <h2 class="text-2xl text-start font-bold mb-2">
+      Online
+    </h2> 
+    <ul class="pl-2 pt-2">
+      <li class="mb-1">
+        <a href="mailto:dsantiagomj@gmail.com">
+          <Button variant="ghost">
+            <Mail size={16} /> Mail
+          </Button>
+        </a>
+      </li>
+      <li class="mb-1">
+        <a href="https://www.linkedin.com/in/dsantiagomj" target="_blank">
+          <Button variant="ghost">
+            <Linkedin size={16} /> Linkedin
+          </Button>
+        </a>
+      </li>
+      <li>
+        <a href="https://github.com/Dsantiagomj" target="_blank">
+          <Button variant="ghost">
+            <Github size={16} /> Github
+          </Button>
+        </a>
+      </li>
+    </ul> 
+  </div>
+</BaseLayout>
