Cambio de prueba

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -12,5 +12,6 @@ const heroDescription = "The page you're looking for was not found."
         Go back home 
       </Button>
     </a>
+    Hola mi amor te amo
   </div>
 </BaseLayout>
