--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -13,4 +13,5 @@ const heroDescription = "The page you're looking for was not found."
       </Button>
     </a>
   </div>
+lalalalalala
 </BaseLayout>
