--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,6 +54,9 @@ const heroDescription=" I'm a web developer based in colombia"
       Contact me to learn more about those projects.
     </p>
     <div class="grid md:grid-cols-3 gap-4 grid-cols-2 mb-2 px-2 items-center">
+      <img src="/companies/monks-white-logo.png" alt="Monks logo dark mode" class="rounded-lg hidden dark:block mb-4"/>
+      <img src="/companies/monks-black-logo.svg" alt="Monks logo light mode" class="rounded-lg block dark:hidden mb-4"/>
+
       <img src="/companies/zemoga-logo-white.png" alt="zemoga logo dark mode" class="rounded-lg hidden dark:block mb-4"/>
       <img src="/companies/zemoga-logo-grey.png" alt="zemoga logo light mode" class="rounded-lg block dark:hidden mb-4"/>
 
@@ -66,9 +69,6 @@ const heroDescription=" I'm a web developer based in colombia"
       <img src="/companies/makeitreal-white.png" alt="Make it real  logo dark mode" class="rounded-lg hidden dark:block mb-2"/>
       <img src="/companies/makeitreal.png" alt="Make it real  logo light mode" class="rounded-lg block dark:hidden mb-2"/>
 
-      <img src="/companies/colorbeats-white.png" alt="Colorbeats  logo dark mode" class="rounded-lg hidden dark:block mb-2"/>
-      <img src="/companies/colorbeats.png" alt="Colorbeats logo light mode" class="rounded-lg block dark:hidden mb-2"/> 
-      
       <img src="/companies/horus-sc-white.svg" alt="Horus Smart Control  logo dark mode" class="rounded-lg hidden dark:block mb-2 "/>
       <img src="/companies/horus-sc.svg" alt="Horus Smart Control  logo light mode" class="rounded-lg block dark:hidden mb-2"/>   
     </div>
