--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,7 +53,9 @@ const heroDescription=" I'm a web developer based in colombia"
       Companies i've worked with and projects i've been involved with as dev and teacher.
       Contact me to learn more about those projects.
     </p>
-    <div class="grid md:grid-cols-3 gap-4 grid-cols-2 mb-2 px-2 items-center">
+    <div class="grid md:grid-cols-3 gap-4 grid-cols-2 mb-2 px-2 items-center justify-items-center">
+      <img src="/companies/mb-star.svg" alt="MB-Star logo" class="rounded-lg mb-4"/>
+
       <img src="/companies/monks-white-logo.png" alt="Monks logo dark mode" class="rounded-lg hidden dark:block mb-4"/>
       <img src="/companies/monks-black-logo.svg" alt="Monks logo light mode" class="rounded-lg block dark:hidden mb-4"/>
 
@@ -68,9 +70,6 @@ const heroDescription=" I'm a web developer based in colombia"
 
       <img src="/companies/makeitreal-white.png" alt="Make it real  logo dark mode" class="rounded-lg hidden dark:block mb-2"/>
       <img src="/companies/makeitreal.png" alt="Make it real  logo light mode" class="rounded-lg block dark:hidden mb-2"/>
-
-      <img src="/companies/horus-sc-white.svg" alt="Horus Smart Control  logo dark mode" class="rounded-lg hidden dark:block mb-2 "/>
-      <img src="/companies/horus-sc.svg" alt="Horus Smart Control  logo light mode" class="rounded-lg block dark:hidden mb-2"/>   
     </div>
   </div>
   <div class="container text-center mx-auto max-w-xl py-2 mt-4">
