--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,7 +5,7 @@ const { title, description } = Astro.props
   <img class="absolute inset-0 w-full h-full object-cover transition-shadow duration-500 group-hover:opacity-0" src="/avatar.svg" alt="avatar" />
   <img class="absolute inset-0 w-full h-full object-cover opacity-0 transition-shadow duration-500 group-hover:opacity-100" src="/hover_avatar.svg" alt="avatar hover"/>
 </div>
-<div class="container mx-auto max-w-xl px-4 py-2 mb-4 dark:bg-slate-900 bg-slate-200 rounded-md">
+<div class="container mx-auto max-w-xl px-4 py-2 mb-4 bg-muted rounded-md">
   <h1 class="text-lg font-bold text-center">{title}</h1>
   <p class="text-center">{description}</p>
 </div>
